crates/aranya-policy-compiler/tests/data/statements/invalid_finish_expression.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
7 |             create Foo[]=>{x: saturating_add(1, 2)}
  |                               ^^^^^^^^^^^^^^^^^^^^ This expression is invalid in finish blocks/functions
